2006-07-20  Michael Kelly  <pioto@pioto.org>

	* New version - 0.1.3

	* Update to pass "${USERLAND}-${ELIBC}" as the unique system 
	identifier, instead of just USERLAND.

2006-07-18  Michael Kelly  <pioto@pioto.org>

	* Add a postrm hook.

2006-07-17  Michael Kelly  <pioto@pioto.org>

	* New version - 0.1.2

2006-07-15  Michael Kelly  <pioto@pioto.org>

	* Initial build - version 0.1.1