@@ -1,3 +1,10 @@
+2006-07-24  Michael Kelly  <pioto@pioto.org>
+
+	* Make use of ${scriptdir}/db.sh to interface with the backend 
+	db instead of doing it directly ourselves.
+
+        * Drop the s from the user and group DBDIR subdirs.
+        
 2006-07-20  Michael Kelly  <pioto@pioto.org>
 
 	* New version - 0.1.3
